    Christoph Biedl to fix indentation.  (Closes: #890373)
  * dh_testroot: With the advent of DEB_RULES_REQUIRES_ROOT, it
    no longer needs to read debian/control to tell whether root
    is needed or not.  However, the warning remains for calling
    dh_testroot outside the source root (as we may need to check
    the compat level in a future version of debhelper).

 -- Niels Thykier <niels@thykier.net>  Sun, 04 Feb 2018 18:03:34 +0000

debhelper (11.1.4) unstable; urgency=medium

  * qmake.pm/qmake4.pm: Avoid global state in the build systems.
  * dh_makeshlibs: Fix --no-act, which could still cause writes
    to the shlibs file.  Thanks to Sven Joachim for reporting it.
    (Closes: #888974)
  * dh_installdocs: Discard auto-detected main doc package when
    passed -A/--all as it causes file-conflicts.
    (Closes: #886108, #888294)
  * Dh_Lib: Fix regression where "foo{bar}" would not be matched
    when the pattern was handled as a glob.  The bug was
    introduced in debhelper/10.6.  Thanks to Wouter Verhelst for
    finding the bug.  (Closes: #888251)
  * d/control: Update the Vcs-* fields to point to
    salsa.debian.org as a part of the migration from alioth.
  * d/control: Update maintainer address debhelper@packages.d.o
    as a part of the migration from alioth.  Any subscription
    to debhelper-devel@lists.alioth.debian.org should be
    replaced by a subscription in tracker.debian.org or
    salsa.debian.org.
  * d/control: Remove Bernhard R. Link from uploaders as he does
    not appear to be active in debhelper at the moment.  Thanks
    to Bernhard for his past contributions.
  * d/control: Bump (Build-)Dependency on dpkg to ensure that
    dpkg provides DEB_RULES_REQUIRES_ROOT and DEB_GAIN_ROOT_CMD
    as a part of its Rules-Requires-Root support.
  * Dh_Lib.pm: Rely on DEB_RULES_REQUIRES_ROOT instead of the
    field to determine whether or not tools may "root-only"
    actions (such as chown'ing).