@@ -16,6 +16,9 @@ debhelper (11.1.5) UNRELEASED; urgency=medium
     is needed or not.  However, the warning remains for calling
     dh_testroot outside the source root (as we may need to check
     the compat level in a future version of debhelper).
+  * makefile.pm: Synchronize output from make (via -O) when
+    make runs in parallel.  Thanks to Goswin von Brederlow for
+    the suggestion.  (Closes: #768791)
 
  -- Niels Thykier <niels@thykier.net>  Sun, 04 Feb 2018 18:03:34 +0000
 
